--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <main>
 
+        <!-- difficulty select -->
         <select id="difficulty">
             <option value="easy">Easy</option>
             <option value="medium" selected>Medium</option>
@@ -33,23 +34,23 @@
         </select>
 
         <header>
-
+            <!-- high score -->
             <div id="high-score" class="score">0</div>
 
-            <div>
-                <button id="play-button">
-                    <img src="img/smile.png" alt="play button">
-                </button>
-            </div>
+            <!-- play button -->
+            <button id="play-button">
+                <img src="img/smile.png" alt="play button">
+            </button>
 
-
+            <!-- current score -->
             <div id="current-score" class="score">0</div>
-
-
-
         </header>
-        <section id="field">
 
+        <!-- win text -->
+        <p id="win-text" class="hidden">YOU WON!!</p>
+
+        <!-- field -->
+        <section id="field">
         </section>
     </main>
 
